# aprs_ros2_demo

./: README.md  package.xml
akb_application/: package.xml  (+2 more)
aprs_driver/: CMakeLists.txt  fanuc_controller.xml  motoman_controller.xml  motoman_hardware.xml  package.xml  pneumatic_controller.xml
aprs_driver/include/aprs_driver/: fanuc_hardware_interface.hpp  fanuc_joint_trajectory_controller.hpp  motoman_hardware_interface.hpp  motoman_joint_trajectory_controller.hpp  network_utilities.hpp  pneumatic_gripper_controller.hpp  simple_messages.hpp
aprs_driver/src/: fanuc_hardware_interface.cpp  fanuc_joint_trajectory_controller.cpp  motoman_hardware_interface.cpp  motoman_joint_trajectory_controller.cpp  pneumatic_gripper_controller.cpp  simple_messages.cpp
aprs_pddl/: CMakeLists.txt  package.xml
aprs_pddl/config/: plansys2_params.yaml
aprs_pddl/include/aprs_pddl/: move_conveyor_action.hpp  move_home_action.hpp  pick_part_action.hpp  place_part_action.hpp  task_planner.hpp
aprs_pddl/launch/: aprs_pddl.launch.py
aprs_pddl/pddl/: aprs_demo_domain.pddl  simple_problem.pddl
aprs_pddl/src/: fanuc_move_home_action.cpp  fanuc_pick_part_action.cpp  fanuc_place_part_action.cpp  motoman_move_home_action.cpp  motoman_pick_part_action.cpp  motoman_place_part_action.cpp  move_conveyor_action.cpp  pick_part_action.cpp  place_part_action.cpp  task_planner.cpp  task_planner_node.cpp
aprs_vision/: CMakeLists.txt  charuco_calibration.py  package.xml
aprs_vision/aprs_vision/: antvision_publisher.py  antvision_read.py  calibration_tool.py  conversions.py  detection_area.py  fanuc_conveyer.py  fanuc_conveyor.py  fanuc_table.py  gear_detection.py  motoman_conveyer.py  motoman_conveyor.py  motoman_table.py  slot_offsets.py  stream_handler.py  teach_table.py  teach_table_annotater.py  teach_table_old.py  tf_broadcaster.py  vision_annotater.py  vision_annotator.py  vision_broadcaster.py  vision_publisher.py  vision_read.py  vision_table.py
aprs_vision/config/: fanuc_conveyer_map_x.npy  fanuc_conveyer_map_y.npy  fanuc_conveyor_map_x.npy  fanuc_conveyor_map_y.npy  fanuc_table_calibration.npz  fanuc_table_map_x.npy  fanuc_table_map_y.npy  map_y.npy  motoman_conveyer_map_x.npy  motoman_conveyer_map_y.npy  motoman_table_calibration.npz  motoman_table_map_x.npy  motoman_table_map_y.npy  parameters.yaml  teach_table_map_x.npy  teach_table_map_y.npy
aprs_vision/launch/: aprs_vision.launch.py
aprs_vision/nodes/: antvision_publisher.py  antvision_publisher_node.py  calibration_tool_node.py  detection_area_node.py  fanuc_conveyer_node.py  fanuc_conveyor_node.py  fanuc_vision_node.py  motoman_conveyer_node.py  motoman_conveyor_node.py  motoman_vision_node.py  object_tf_broadcaster.py  publish_dummy_trays.py  teach_table_publisher_node.py  teach_table_vision_node.py  vision_annotater_node.py  vision_annotator_node.py  vision_broadcaster_node.py  vision_publisher_node.py
aprs_vision/testing/: fanuc_conveyor_map_x.npy  fanuc_conveyor_map_y.npy  motoman_conveyer_map_x.npy  motoman_conveyer_map_y.npy  motoman_conveyor_calibration.npz  motoman_table_map_x.npy  motoman_table_map_y.npy
fanuc_demo/: CMakeLists.txt  package.xml
fanuc_demo/include/fanuc_demo/: fanuc_kitting.hpp
fanuc_demo/src/: fanuc_kitting.cpp
fanuc_hardware/: CMakeLists.txt  package.xml
fanuc_hardware/include/fanuc_hardware/: fanuc_hardware_interface.hpp
fanuc_hardware/nodes/: command_publisher.py
fanuc_hardware/src/: CMakeLists.txt  JOINT_TRAJ_PT_LINUX.cpp  fanuc_hardware_interface.cpp
install/fanuc_description/share/fanuc_description/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/fanuc_description/share/fanuc_description/cmake/: fanuc_descriptionConfig.cmake
install/fanuc_description/share/fanuc_description/config/: fanuc_controllers.yaml
install/fanuc_description/share/fanuc_description/launch/: fanuc_bringup.launch.py
install/fanuc_moveit_config/share/fanuc_moveit_config/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/robot_commander/share/robot_commander/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
motoman_description/: CMakeLists.txt  package.xml
motoman_description/config/: motoman.rviz  motoman_controllers.yaml
motoman_description/launch/: motoman_bringup.launch.py  visualize_motoman.launch.py
motoman_description/meshes/: motoman_base_plate.stl  motoman_gripper_link_simplified.stl  motoman_left_finger.stl  motoman_right_finger.stl
motoman_description/urdf/: motoman.ros2_control.xacro  motoman.urdf.xacro  motoman_common.xacro  motoman_gripper_macro.xacro  motoman_sia20_macro.xacro
motoman_description/urdf/gripper/: motoman_gripper_macro.xacro
motoman_moveit_config/: CMakeLists.txt  package.xml
motoman_moveit_config/config/: controllers.yaml  joint_limits.yaml  kinematics.yaml  motoman.srdf  moveitpy_config.yaml  ompl_planning.yaml
motoman_moveit_config/launch/: motoman_move_group.launch.py
robot_commander/: CMakeLists.txt  package.xml
robot_commander/config/: fanuc.rviz  motoman.rviz  parameters.yaml
robot_commander/include/robot_commander/: motoman_robot_commander.hpp  robot_commander.hpp
robot_commander/launch/: fanuc_robot_commander.launch.py  motoman_robot_commander.launch.py  robot_commander.launch.py
robot_commander/meshes/: conveyer.stl  conveyor.stl  large_gear.stl  large_gear_part_tray.stl  large_gear_tray.stl  m2l1_kit_tray.stl  medium_gear.stl  medium_gear_part_tray.stl  medium_gear_tray.stl  optical_table.stl  s2l2_kit_tray.stl  s2m2_kit_tray.stl  small_gear.stl  small_gear_part_tray.stl  small_gear_tray.stl
robot_commander/nodes/: fanuc_robot_commander.cpp  motoman_robot_commander.cpp  test_follow_joint_trajectory.py
robot_commander/src/: motoman_robot_commander.cpp  robot_commander.cpp
simple_msgs_interfaces/: CMakeLists.txt  package.xml
simple_msgs_interfaces/include/simple_msgs_interfaces/: simple_msgs_interface.hpp
simple_msgs_interfaces/src/: simple_msgs_interface.cpp
(+263 files in other folders)
