<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>aprs_driver</name>
  <version>0.0.1</version>
  <description>ROS Drivers for Robots in the APRS Lab at NIST</description>
  <maintainer email="justin.albrecht@nist.gov">Justin Albrecht</maintainer>
  <maintainer email="sanchit.kedia@nist.gov">Sanchit Kedia</maintainer>
  <maintainer email="joseph.fernandez@nist.gov">Joseph Fernandez</maintainer>
 
  <license>NIST</license>

  <depend>rclcpp</depend>
  <depend>hardware_interface</depend>
  <depend>controller_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>aprs_interfaces</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>