<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>fanuc_hardware</name>
  <version>0.0.1</version>
  <description>Fanuc Hardware Interface for APRS Lab at NIST</description>
  <maintainer email="justin.albrecht@nist.gov">Justin Albrecht</maintainer>
  <license>NIST</license>

  <depend>rclcpp</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>

  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>