<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>motoman_description</name>
  <version>2024.1.0</version>
  <description>Package containing URDF descriptions for the motoman in the APRS Lab</description>
  <maintainer email="joseph.fernandez@nist.gov">Joseph Fernandez</maintainer>
  <license>NIST</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>motoman_hardware</exec_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>