<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>fanuc_moveit_config</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="justin.albrecht@nist.gov">Justin Albrecht</maintainer>
  <maintainer email="sanchit.kedia@nist.gov">Sanchit Kedia</maintainer>
  <license>NIST</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>python3-pykdl</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
