<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_commander</name>
  <version>2024.1.0</version>
  <description>Package to command robots in aprs lab</description>
  <maintainer email="justin.albrecht@nist.gov">Justin Albrecht</maintainer>
  <license>NIST</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>aprs_interfaces</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>